grammar/sashimi.g4
grammar Sashimi;
DIRECTIVE : 'sashimi:';
COMMAND : 'markdown' | 'display' | 'repeat' | 'layout_section';
ENTITY: 'entity';
SEPERATOR : ',';
PROP_START: '-';
OF : 'of';
IS : 'is';
AS : 'as';
LPAREN : '(';
RPAREN : ')';
HLPAREN : '[';
HRPAREN : ']';
TYPE : 'text' | 'picture' | 'number';
UNION : 'manyOf' | 'oneOf';
LIST : 'list';
CONSTRAINT : HLPAREN [a-z]+ HRPAREN;
ALIAS : '"'[a-zA-Z0-9 ?!-]+ [a-zA-Z0-9?!-]*'"';
IDENT : [a-zA-Z_]+;

union_decl : UNION LPAREN ALIAS (SEPERATOR ALIAS)* RPAREN;
type_decl : TYPE ( CONSTRAINT )?;
list_decl : LIST type_decl;
type_def : list_decl | union_decl | type_decl;
alias_decl : AS ALIAS;
type_is : IS type_def;
prop_decl : PROP_START IDENT alias_decl? type_is;
command_call : COMMAND LPAREN IDENT RPAREN;
entity_def :  ENTITY LPAREN IDENT RPAREN OF prop_decl (prop_decl)*;
export : DIRECTIVE (command_call | entity_def);
WS : [ \t\r\n]+ -> skip;
